# ihoop

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish-to-pypi.yml  test.yml
examples/: 01_strict_introduction.ipynb  02_combining_metaclasses.ipynb
ihoop/: __init__.py  strict.py
tests/: test_classvar.py  test_strict.py
