[project]
name = "ihoop"
version = "0.1.2"
description = "Abstract/Final Patterns in Python"
readme = "README.md"
requires-python = ">=3.9" # todo: check versions
authors = [
  {name = "lockwo"},
]
keywords = ["python", "metaclasses", "typing", "concrete", "strict"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
urls = { repository = "https://github.com/lockwo/ihoop" }

dependencies = []

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
examples = [
    "equinox>=0.13.0"
]
testing = [
    "pytest>=7.4.0",
    "nbmake>=1.5.0",
    "pyright==1.1.408",
]

[tool.setuptools]
packages = { find = { include = ["ihoop"] } }

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = -1
order_by_type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportUnnecessaryTypeIgnoreComment = true
include = ["ihoop"]
